--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -6,7 +6,7 @@
 
   {{#*inline "header-block" }}
     <header id="top" data-parallax="scroll" data-image-src="images/image27.jpg">
-      {{> includes/nav }}
+      {{> nav }}
       <div class="container">
         <div class="jumbotron">
           <h1><span class="cap">G</span>round <span class="cap">E</span>ffects <small>Landscaping</small></h1>
