--- a/src/pages/partials/layouts/base.hbs
+++ b/src/pages/partials/layouts/base.hbs
@@ -49,7 +49,7 @@
 
     {{#> header-block }}
         <header id="top">
-            {{> includes/nav }}
+            {{> nav }}
             <div class="container">
                 {{> heading }}
             </div>
