--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -5,7 +5,7 @@
   {{/inline}}
 
   {{#*inline "header-block" }}
-    <header id="top" data-parallax="scroll" data-image-src="images/image27.jpg">
+    <header id="top" data-parallax="scroll" data-image-src="images/gallery/image27.jpg">
       {{> nav }}
       <div class="container">
         <div class="jumbotron">
@@ -35,7 +35,7 @@
       </div>
     </section>
 
-    <section id="image-gap" data-parallax="scroll" data-image-src="images/image28.jpg"></section>
+    <section id="image-gap" data-parallax="scroll" data-image-src="images/gallery/image28.jpg"></section>
 
     <section id="testimonials" class="card">
       <div class="container">
