--- a/src/pages/quote.hbs
+++ b/src/pages/quote.hbs
@@ -148,6 +148,6 @@
         map.setMapTypeId('Grayscale');
       }
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSeiWk2Sx6BcP6Y3bpLeqrk5GbNpPGvQM&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key={{mapApiKey}}&callback=initMap"></script>
   {{/inline}}
 {{/layouts/base}}
