--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,7 +2,7 @@
   z-index: 0 !important;
 }
 
-img[src="images/image27.jpg"] {
+img[src="images/gallery/image27.jpg"] {
   filter: brightness(70%);
 }
 
