Removed unnecessary fonts

--- a/src/pages/partials/layouts/base.hbs
+++ b/src/pages/partials/layouts/base.hbs
@@ -20,10 +20,10 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" type="text/css" />
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Lora" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Economica:wght@700&display=swap" />
     <link rel="stylesheet" href="fonts/didot/didot.css" type="text/css" />
     <link rel="stylesheet" href="fonts/futura-pt/futura-pt-heavy.css" type="text/css" />
-    <link rel="stylesheet" href="fonts/economica/economica.css" type="text/css" />
     <link rel="stylesheet" href="fonts/minion/minion-pro.css" type="text/css" />
 
     <link rel="stylesheet" href="css/theme.css" type="text/css" />
