Converted JS to Typescript

--- a/src/pages/gallery.hbs
+++ b/src/pages/gallery.hbs
@@ -15,11 +15,62 @@
   {{/inline}}
   
   {{#*inline "content" }}
-    <section id="gallery">
-      <div class="container">
-        <div class="masonry" id="gallery-images">
-          
-        </div>
+    <section id="gallery" class="container">
+      <div class="masonry" id="gallery-images" itemscope itemtype="http://schema.org/ImageGallery">
+        {{#*inline "image" }}
+          <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="images/gallery/{{src}}"
+              itemprop="contentUrl"
+              data-src="images/gallery/{{src}}"
+              data-msrc="images/thumbnails/tn_{{src}}"
+              data-w="{{w}}"
+              data-h="{{h}}">
+              <img src="images/thumbnails/tn_{{src}}" itemprop="thumbnail" alt="Gallery Image" />
+            </a>
+          </figure>
+        {{/inline}}
+
+        {{> image src="image27.jpg" w=2016 h=1512 }}
+        {{> image src="image28.jpg" w=1512 h=2016 }}
+        {{> image src="image29.jpg" w=480 h=640 }}
+        {{> image src="image30.jpg" w=640 h=480 }}
+        {{> image src="image31.jpg" w=640 h=480 }}
+        {{> image src="image32.jpg" w=640 h=480 }}
+        {{> image src="image33.jpg" w=1512 h=2016 }}
+        {{> image src="image34.jpg" w=1512 h=2016 }}
+        {{> image src="image35.jpg" w=2016 h=1512 }}
+        {{> image src="image36.jpg" w=1512 h=2016 }}
+        {{> image src="image37.jpg" w=2016 h=1512 }}
+        {{> image src="image38.jpg" w=2016 h=1512 }}
+        {{> image src="image39.jpg" w=2016 h=1512 }}
+        {{> image src="image40.jpg" w=1280 h=1280 }}
+        {{> image src="image22.jpg" w=960 h=1280 }}
+        {{> image src="image23.jpg" w=1280 h=960 }}
+        {{> image src="image24.jpg" w=960 h=1280 }}
+        {{> image src="image25.jpg" w=1000 h=1280 }}
+        {{> image src="image26.jpg" w=2016 h=1264 }}
+        {{> image src="image1.jpg" w=4017 h=2860 }}
+        {{> image src="image2.jpg" w=4006 h=2814 }}
+        {{> image src="image3.jpg" w=3024 h=4032 }}
+        {{> image src="image4.jpg" w=4032 h=3024 }}
+        {{> image src="image5.jpg" w=2448 h=3264 }}
+        {{> image src="image6.jpg" w=4032 h=3024 }}
+        {{> image src="image7.jpg" w=4032 h=3024 }}
+        {{> image src="image8.jpg" w=4032 h=3024 }}
+        {{> image src="image9.jpg" w=3024 h=4032 }}
+        {{> image src="image10.jpg" w=1966 h=2621 }}
+        {{> image src="image11.jpg" w=1136 h=640 }}
+        {{> image src="image12.jpg" w=1136 h=640 }}
+        {{> image src="image13.jpg" w=1136 h=640 }}
+        {{> image src="image14.jpg" w=2410 h=1808 }}
+        {{> image src="image15.jpg" w=3264 h=2448 }}
+        {{> image src="image16.jpg" w=3264 h=2448 }}
+        {{> image src="image17.jpg" w=1860 h=1395 }}
+        {{> image src="image18.jpg" w=3264 h=2448 }}
+        {{> image src="image19.jpg" w=1280 h=960 }}
+        {{> image src="image20.jpg" w=1280 h=960 }}
+        {{> image src="image21.jpg" w=1280 h=960 }}
+
       </div>
     </section>
 
@@ -64,71 +115,7 @@
     {{!-- PhotoSwipe JS --}}
     <script src="images/photoswipe/photoswipe.min.js"></script>
     <script src="images/photoswipe/photoswipe-ui-default.min.js"></script>
-    <script>
-      $(function() {
-        var $gallery = $('#gallery-images'),
-            pswpElement = $('.pswp').get(0),
-            galleryImages = [
-              { src: 'image27.jpg', w: 2016, h: 1512 },
-              { src: 'image28.jpg', w: 1512, h: 2016 },
-              { src: 'image29.jpg', w: 480, h: 640 },
-              { src: 'image30.jpg', w: 640, h: 480 },
-              { src: 'image31.jpg', w: 640, h: 480 },
-              { src: 'image32.jpg', w: 640, h: 480 },
-              { src: 'image33.jpg', w: 1512, h: 2016 },
-              { src: 'image34.jpg', w: 1512, h: 2016 },
-              { src: 'image35.jpg', w: 2016, h: 1512 },
-              { src: 'image36.jpg', w: 1512, h: 2016 },
-              { src: 'image37.jpg', w: 2016, h: 1512 },
-              { src: 'image38.jpg', w: 2016, h: 1512 },
-              { src: 'image39.jpg', w: 2016, h: 1512 },
-              { src: 'image40.jpg', w: 1280, h: 1280 },
-              { src: 'image22.jpg', w: 960, h: 1280 },
-              { src: 'image23.jpg', w: 1280, h: 960 },
-              { src: 'image24.jpg', w: 960, h: 1280 },
-              { src: 'image25.jpg', w: 1000, h: 1280 },
-              { src: 'image26.jpg', w: 2016, h: 1264 },
-              { src: 'image1.jpg', w: 4017, h: 2860 },
-              { src: 'image2.jpg', w: 4006, h: 2814 },
-              { src: 'image3.jpg', w: 3024, h: 4032 },
-              { src: 'image4.jpg', w: 4032, h: 3024 },
-              { src: 'image5.jpg', w: 2448, h: 3264 },
-              { src: 'image6.jpg', w: 4032, h: 3024 },
-              { src: 'image7.jpg', w: 4032, h: 3024 },
-              { src: 'image8.jpg', w: 4032, h: 3024 },
-              { src: 'image9.jpg', w: 3024, h: 4032 },
-              { src: 'image10.jpg', w: 1966, h: 2621 },
-              { src: 'image11.jpg', w: 1136, h: 640 },
-              { src: 'image12.jpg', w: 1136, h: 640 },
-              { src: 'image13.jpg', w: 1136, h: 640 },
-              { src: 'image14.jpg', w: 2410, h: 1808 },
-              { src: 'image15.jpg', w: 3264, h: 2448 },
-              { src: 'image16.jpg', w: 3264, h: 2448 },
-              { src: 'image17.jpg', w: 1860, h: 1395 },
-              { src: 'image18.jpg', w: 3264, h: 2448 },
-              { src: 'image19.jpg', w: 1280, h: 960 },
-              { src: 'image20.jpg', w: 1280, h: 960 },
-              { src: 'image21.jpg', w: 1280, h: 960 }
-            ];
-
-        function display(index) {
-          var options = { index: index };
-          var gallery = new PhotoSwipe(pswpElement, PhotoSwipeUI_Default, galleryImages, options)
-          gallery.init();
-        }
-
-        galleryImages.forEach(function(img, index) {
-          var src = img.src;
-          img.src = 'images/gallery/' + src;
-          img.msrc = 'images/thumbnails/tn_' + src;
-
-          $('<img src="' + img.msrc + '" alt="Gallery Image" />')
-            .appendTo($gallery)
-            .click(function() { display(index) });
-        });
-
-      });
-    </script>
+    <script src="js/gallery.js"></script>
   {{/inline}}
 
 {{/layouts/base}}
