--- a/src/pages/quote.hbs
+++ b/src/pages/quote.hbs
@@ -39,17 +39,6 @@
               </div>
               <div class="text-center">
                 <script src="https://www.google.com/recaptcha/api.js"></script>
-                <script>
-                  function onSubmit(token) {
-                    var form = document.getElementById("quote-form");
-                    if (form.checkValidity()) {
-                      form.submit();
-                    } else {
-                      grecaptcha.reset();
-                      form.reportValidity();
-                    }
-                  }
-                </script>
                 <button class="g-recaptcha button center-block"
                   type="submit"
                   data-sitekey="6LfSPJsaAAAAAGLIFbZTsNppVE7qscsBDFksgZUH"
@@ -77,77 +66,7 @@
   {{/inline}}
 
   {{#*inline "scripts-block" }}
-    <!-- Google Map -->
-    <script>
-      function initMap() {
-        var shop = {lat: 36.445603, lng: -94.299035};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 10,
-          center: shop,
-          disableDefaultUI: true
-        });
-        new google.maps.Marker({
-            position: shop,
-            map: map,
-            icon: {
-                url: "https://static.squarespace.com/universal/images-v6/icons/icon-map-marker-2x.png",
-                size: new google.maps.Size(52, 68),
-                scaledSize: new google.maps.Size(26, 34),
-                anchor: new google.maps.Point(13, 34)
-            }
-        });
-        map.mapTypes.set('Grayscale', new google.maps.StyledMapType(
-          [{
-            "stylers": [
-              { "visibility": "on" },
-              { "saturation": -100 },
-              { "gamma": 0.54 }
-            ]
-          }, {
-            "featureType": "road",
-            "elementType": "labels.icon",
-            "stylers": [{ "visibility": "off" }]
-          }, {
-            "featureType": "water",
-            "stylers": [{ "color": "#4d4946" }]
-          }, {
-            "featureType": "poi",
-            "elementType": "labels.icon",
-            "stylers": [{ "visibility": "off" }]
-          }, {
-            "featureType": "poi",
-            "elementType": "labels.text",
-            "stylers": [{ "visibility": "simplified" }]
-          }, {
-            "featureType": "road",
-            "elementType": "geometry.fill",
-            "stylers": [{ "color": "#ffffff" }]
-          }, {
-            "featureType": "road.local",
-            "elementType": "labels.text",
-            "stylers": [{ "visibility": "simplified" }]
-          }, {
-            "featureType": "water",
-            "elementType": "labels.text.fill",
-            "stylers": [{ "color": "#ffffff" }]
-          }, {
-            "featureType": "transit.line",
-            "elementType": "geometry",
-            "stylers": [{ "gamma": 0.48 }]
-          }, {
-            "featureType": "transit.station",
-            "elementType": "labels.icon",
-            "stylers": [{ "visibility": "off" }]
-          }, {
-            "featureType": "road",
-            "elementType": "geometry.stroke",
-            "stylers": [{ "gamma": 7.18 }]
-          }],
-        { name: 'Grayscale' }
-      ));
-        map.setMapTypeId('Grayscale');
-      }
-    </script>
+    <script src="js/quote.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key={{mapApiKey}}&callback=initMap"></script>
   {{/inline}}
 {{/layouts/base}}
