--- a/src/pages/quote.hbs
+++ b/src/pages/quote.hbs
@@ -1,7 +1,7 @@
 {{#> layouts/base title="Get A Quote" }}
 
   {{#*inline "head-block" }}
-    <link rel="stylesheet" href="css/quote.css" type="text/css" />
+    <link rel="stylesheet" href="css/quote.css" type="text/css">
   {{/inline}}
 
   {{#*inline "heading" }}
@@ -9,7 +9,7 @@
       <h6>Project</h6>
       <h2>Gallery</h2>
     </div>
-    <br />
+    <br>
   {{/inline}}
   
   {{#*inline "content" }}
@@ -19,19 +19,19 @@
           <div class="col-md-8">
             <h6>Get A</h6>
             <h2>Quote</h2>
-            <hr />
+            <hr>
             <form id="quote-form" action="/submit-quote" method="post">
               <div class="form-group">
                 <label for="name">Name</label>
-                <input id="name" name="name" type="text" class="form-control" placeholder="Enter first and last name" required />
+                <input id="name" name="name" type="text" class="form-control" placeholder="Enter first and last name" required>
               </div>
               <div class="form-group">
                 <label for="email">Email</label>
-                <input id="email" name="email" type="email" class="form-control" placeholder="Enter email" required />
+                <input id="email" name="email" type="email" class="form-control" placeholder="Enter email" required>
               </div>
               <div class="form-group">
                 <label for="phone">Phone</label>
-                <input id="phone" name="phone" type="tel" class="form-control" placeholder="Enter phone number" required />
+                <input id="phone" name="phone" type="tel" class="form-control" placeholder="Enter phone number" required>
               </div>
               <div class="form-group">
                 <label for="description">Description</label>
@@ -50,12 +50,12 @@
           <div class="col-md-4">
             <h6>Contact</h6>
             <h2>Me</h2>
-            <hr />
-            <p>Tyler Burns<br />2587 Forest Hills Blvd.<br />Bella Vista, AR 72715<br /><i>(By appointment only)</i></p>
-            <p>Hours of Operation:<br />8 a.m.-6 p.m. Monday-Saturday</p>
+            <hr>
+            <p>Tyler Burns<br>2587 Forest Hills Blvd.<br>Bella Vista, AR 72715<br><i>(By appointment only)</i></p>
+            <p>Hours of Operation:<br>8 a.m.-6 p.m. Monday-Saturday</p>
             <p>
-              <a href="mailto:geffects@yahoo.com">geffects@yahoo.com</a><br />
-              <a href="tel:1-479-633-8985">(479) 633-8985</a><br />
+              <a href="mailto:geffects@yahoo.com">geffects@yahoo.com</a><br>
+              <a href="tel:1-479-633-8985">(479) 633-8985</a><br>
               <a href="tel:1-479-855-5819">(479) 855-5819</a>
             </p>
             <div id="map"></div>
