--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -14,7 +14,7 @@ body > [data-parallax] {
   max-height: 90vh;
 }
 
-section#services img {
+#services img {
   float: left;
   margin-right: 10px;
   margin-top: 18px;
