--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,7 +1,7 @@
 {{#> layouts/base }}
 
   {{#*inline "head-block" }}
-    <link rel="stylesheet" href="css/home.css" type="text/css" />
+    <link rel="stylesheet" href="css/home.css" type="text/css">
   {{/inline}}
 
   {{#*inline "header-block" }}
@@ -22,7 +22,7 @@
           <div class="col-md-8">
             <h6>Services</h6>
             <h2>More than 20 Years of Craftsmanship</h2>
-            <img src="images/logo.png" alt="Logo" />
+            <img src="images/logo.png" alt="Logo">
             <p>From small to large projects, we look forward to meeting you and understanding what you want out of your yard. We do all we can to design a beautiful, useful space for your family. As a team of experts, we come together to deliver beauty down to every detail! We love to help make your yard a place you're proud to come home too, a place you want to use, a place you don't mind bragging about... because this... is your outdoor space! Welcome home! Welcome to the Ground Effects difference! Experts in design... Experts in installation!</p>
           </div>
           <div class="col-md-3 col-md-offset-1">
@@ -35,7 +35,7 @@
       </div>
     </section>
 
-    <section id="image-gap" data-parallax="scroll" data-image-src="images/gallery/image28.jpg"></section>
+    <div id="image-gap" data-parallax="scroll" data-image-src="images/gallery/image28.jpg"></div>
 
     <section id="testimonials" class="card">
       <div class="container">
@@ -66,12 +66,12 @@
             <p>To use only the best in materials: wood, stone, concrete and steel. All elements of lasting value! I provide a 1 year guarantee on all labor and plant material. I never compromise quality for time. I work at giving my clients realistic schedules that accommodate their lives. I strive for honest customer service and work that is completed to your satisfaction.</p>
             <h5>See my handy work</h5>
             <a href="/gallery" class="button">Project Gallery</a>
-            <hr />
+            <hr>
             <h2>About Me &amp; My Team</h2>
             <h5>My name is Tyler Burns.</h5>
             <p>I started Ground Effects in 1996 out of my parents' truck doing only small landscape jobs with nothing more than a pick, shovel, and a desire to create. Although I knew only the basics of landscaping then, I was passionate about creating beautiful, usable spaces for people to enjoy for years to come.</p>
             <p>Since then, we've grown in knowledge and in size. Our crews have a combined experience of over 40 years of landscape installation! We stay up to date on the latest technology in our ﬁeld through educational classes and workshops. We are certiﬁed in paver installation and are a state-licensed landscape contractor. We are large enough to take on any project size, but small enough to give our customers the personal attention they deserve. All of us enjoy what we do and it shows in our work!</p>
-            <hr />
+            <hr>
           </div>
         </div>
       </div>
