--- a/src/pages/partials/layouts/base.hbs
+++ b/src/pages/partials/layouts/base.hbs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
-    <meta name="description" content="From small to large projects, we look forward to getting you what you want out of your yard. Our team will design a beautiful, useful space for your family." />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
+    <meta name="description" content="From small to large projects, we look forward to getting you what you want out of your yard. Our team will design a beautiful, useful space for your family.">
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -15,19 +15,19 @@
     <!-- End Google Tag Manager -->
 
     <!-- Normalize -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" integrity="sha256-t2/7smZfgrST4FS1DT0bs/KotCM74XlcqZN5Vu7xlrw=" crossorigin="anonymous" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" integrity="sha256-t2/7smZfgrST4FS1DT0bs/KotCM74XlcqZN5Vu7xlrw=" crossorigin="anonymous" type="text/css">
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" type="text/css">
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Economica:wght@700&display=swap" />
-    <link rel="stylesheet" href="fonts/didot/didot.css" type="text/css" />
-    <link rel="stylesheet" href="fonts/futura-pt/futura-pt-heavy.css" type="text/css" />
-    <link rel="stylesheet" href="fonts/minion/minion-pro.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Economica:wght@700&display=swap">
+    <link rel="stylesheet" href="fonts/didot/didot.css" type="text/css">
+    <link rel="stylesheet" href="fonts/futura-pt/futura-pt-heavy.css" type="text/css">
+    <link rel="stylesheet" href="fonts/minion/minion-pro.css" type="text/css">
 
-    <link rel="stylesheet" href="css/theme.css" type="text/css" />
-    <link rel="stylesheet" href="css/navigation.css" type="text/css" />
+    <link rel="stylesheet" href="css/theme.css" type="text/css">
+    <link rel="stylesheet" href="css/navigation.css" type="text/css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -58,7 +58,7 @@
 
     {{> content }}
 
-    <div class="container"><hr /></div>
+    <div class="container"><hr></div>
 
     <footer id="footer">
         <h2>Get A Quote</h2>
@@ -84,6 +84,7 @@
     <script src="/__/firebase/8.3.1/firebase-analytics.js"></script>
     <script src="/__/firebase/init.js"></script>
     <script>firebase.analytics();</script>
+    <script>var exports = {};</script>
 
     {{#> scripts-block }}
         {{! Custom scripts per page can be added. }}
