--- a/src/pages/partials/nav.hbs
+++ b/src/pages/partials/nav.hbs
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="/">
-            <img src="images/logo.png" alt="Logo" />
+            <img src="images/logo.png" alt="Logo">
         </a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
