--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -52,7 +52,7 @@ header {
 
   h1 {
     font-family: 'Didot', serif;
-    font-size: 120px;
+    font-size: max(29pt, 7vw);
     text-transform: none;
     font-weight: normal;
 
